# sonarqube-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EVALUATION.md  README.md  evaluation.xml  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
src/sonarqube_mcp/: __init__.py  _mcp.py  client.py  errors.py  models.py  output.py  server.py  tools.py
tests/: test_client.py  test_client_pagination.py  test_errors.py  test_mcp_client_cache.py  test_protocol.py  test_tools_helpers.py  test_tools_integration.py
