[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sonarqube-mcp"
version = "0.1.0"
description = "MCP server for SonarQube — projects, metrics, quality gate, issues, worst-metric ranking."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Mikhail Shchegolev" },
]
keywords = ["mcp", "sonarqube", "sonarcloud", "code-quality", "static-analysis", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2",
    "requests>=2.31",
    "urllib3>=2.0",
    "pydantic>=2.0",
    "typing-extensions>=4.5; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "responses>=0.25",
]

[project.scripts]
sonarqube-mcp = "sonarqube_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mshegolev/sonarqube-mcp"
Issues = "https://github.com/mshegolev/sonarqube-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sonarqube_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
